@@ -529,8 +529,8 @@
 616: Taekwon
 617: Star Gladiator
 618: Soul Linker
-619: Gunslinger
-620: Ninja
+//619: FREE
+//620: FREE
 621: Summer
 //...
 650: Unknown Job
